--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -147,7 +147,7 @@ view "<%= key %>" {
 <% if @recursion == 'yes' -%>
 zone "." IN {
     type hint;
-    file "named.ca";
+    file "/etc/bind/db.root";
 };
 
 <% end -%>
